@@ -12,6 +12,7 @@
 It maintains the partition ordering characteristic that all keys are processed in log order, yet for most use cases will be close to as fast as `UNORDERED` when the key space is large enough.
 * https://github.com/confluentinc/parallel-consumer/issues/37[Support BitSet encoding lengths longer than Short.MAX_VALUE #37] - adds new serialisation formats that supports wider range of offsets - (32,767 vs  2,147,483,647) for both BitSet and run-length encoding.
 * Commit modes have been renamed to make it clearer that they are periodic, not per message.
+* Minor performance improvement, switching away from concurrent collections.
 
 == v0.2.0.3
 
